# rgbrain-labs

./: .env.exemplo  README.md  pyproject.toml
rgbrain_labs/: classificacao_agenda.ipynb  extaindo_informacoes_texto.ipynb  gerador_texto.ipynb  imagem_para_texto.ipynb
rgbrain_labs/baixar_videos/: baixar_youtube.py
rgbrain_labs/extraindo_informacoes_texto/: alteracao-item-encantado.docx  alteracao-item-encantado.txt
rgbrain_labs/gerador_texto/: teste_01.md
rgbrain_labs/laboratorio_agendas/: agendas.csv  agendas_analisadas.csv  poc_classificacao_agenda.ipynb
rgbrain_labs/laboratório_agendas/: churn.md  estudo_classificação_agenda.md  poc_classificacao_agenda.ipynb
rgbrain_labs/rag/: faq_consorcio.docx
