[tool.poetry]
name = "rgbrain-labs"
version = "0.1.0"
description = ""
authors = ["Rodrigo Gonçalves"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0, <3.12"
langchain = "^0.2.1"
notebook = "^7.2.0"
langchain-community = "^0.2.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
pypdf2 = "^3.0.1"
easyocr = "^1.7.1"
opencv-python = "^4.10.0.82"
ultralytics = "^8.2.28"
tts = {git = "https://github.com/coqui-ai/TTS.git"}
python-dotenv = "^1.0.1"
langchain-google-genai = "^1.0.6"
pandas = ">=1.4,<2.0"
yt-dlp = "^2024.7.9"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
